// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VHListItem.vue renders default VHListItem 1`] = `
<div class="VHListItem">
  <div class="VHListItem-icon">
    <!---->
  </div>
  <div class="VHListItem-rightContent"></div>
</div>
`;

exports[`VHListItem.vue renders modified VHListItem li 1`] = `
<li class="VHListItem">
  <div class="VHListItem-icon">
    <vh-icon-stub name="car"></vh-icon-stub>
  </div>
  <div class="VHListItem-rightContent"></div>
</li>
`;

exports[`VHListItem.vue renders modified VHListItem nav  1`] = `
<nav class="VHListItem">
  <div class="VHListItem-icon">
    <vh-icon-stub name="car"></vh-icon-stub>
  </div>
  <div class="VHListItem-rightContent"></div>
</nav>
`;
